--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   </head>
   <body>
     <!--Navbar-->
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3">
       <div class="container">
-        <a href="#" class="navbar-brand">FrontEnd Bootcamp</a>
+        <a href="#" class="navbar-brand">Azure Cloud Platform Bootcamp</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -39,6 +39,42 @@
         </div>
       </div>
     </nav>
+
+    <!--Showcase Area-->
+    <section class="bg-dark text-light p-5 p-lg-0 pt-lg-5 text-center text-sm-start">
+      <div class="conatainer">
+        <div class="d-sm-flex align-items-center justify-content-between">
+          <div>
+
+          
+          <h1> Want to
+            Become a <span class="text-warning"><br>Azure Devops Engineer</span>  
+          </h1>
+          <p class="lead my-4">
+            Microsoft Azure, often referred to as Azure, is a cloud computing service operated by Microsoft for application management via Microsoft-managed data centers. 
+
+          </p>
+          <button class="btn btn-primary btn-lg">
+            Start The Enrollment
+          </button>
+          </div>
+          <img  class="img-fluid w-50 " src="img/showcase.png" alt="">
+
+        </div>
+      </div>
+    </section>
+
+    <!--Newsletter-->
+    <section class="bg-primary text-light p-5">
+      <div class="container">
+        <div class="d-md-flex justify-content-between align-items-center">  
+          <h3 class="mb-3 mb-md-0">Sign Up For Our Latest Updates</h3>
+
+        
+        </div>
+      </div>
+
+    </section>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
