--- a/index.html
+++ b/index.html
@@ -21,12 +21,11 @@
     <!--External Css File-->
     <link rel="stylesheet" href="style.css" />
     <!--Favicons-->
-    <link rel="icon" type="image/png" href="./img/showcase.png" sizes="96x96">
-
+    <link rel="icon" type="image/png" href="./img/showcase.png" sizes="96x96" />
   </head>
   <body>
     <!--Navbar-->
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3">
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 fixed-top">
       <div class="container">
         <a href="#" class="navbar-brand">Azure Cloud Platform Bootcamp</a>
         <button
@@ -71,7 +70,11 @@
             </p>
             <button class="btn btn-primary btn-lg">Start The Enrollment</button>
           </div>
-          <img class="img-fluid w-50" src="img/showcase.png" alt="" />
+          <img
+            class="img-fluid w-50"
+            src="img/Microsoft_azure_logo_black.jpg"
+            alt=""
+          />
         </div>
       </div>
     </section>
@@ -96,7 +99,7 @@
     <!-- Boxes -->
     <section class="py-5">
       <div class="container">
-        <div class="row text-center">
+        <div class="row text-center g-4">
           <div class="col-md">
             <div class="card bg-dark text-light">
               <div class="card-body text-center">
@@ -147,6 +150,151 @@
                 <div href="#" class="btn btn-dark">Read More</div>
               </div>
             </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!--Learn Section-->
+    <section id="learn" class="p-5">
+      <div class="container">
+        <div class="row align-item-center justify-content-between">
+          <div class="col-md">
+            <img src="./img/devops.png" class="img-fluid" alt="devops" />
+          </div>
+          <div class="col-md p-5">
+            <h2>Learn the fundamental of Devops</h2>
+            <p class="lead">
+              DevOps is a set of practices that combines software development
+              and IT operations. It aims to shorten the systems development life
+              cycle and provide continuous delivery with high software quality.
+              DevOps is complementary with Agile software development; several
+              DevOps aspects came from the Agile methodology.
+            </p>
+            <a href="#" class="btn btn-light">
+              <div class="bi bi-chevron-right">Read More</div>
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <hr />
+    <!-- Cloud Computing Part-->
+    <section id="learn" class="p-5 bg-white text-center">
+      <div class="container">
+        <div class="row align-item-center justify-content-between">
+          <div class="col-md p-5">
+            <h2>Learn the fundamental of cloud computing</h2>
+            <p class="lead">
+              Cloud computing is a general term for anything that involves
+              delivering hosted services over the internet. These services are
+              divided into three main categories or types of cloud computing:
+              infrastructure as a service ( IaaS ), platform as a service (
+              PaaS) and software as a service ( SaaS ). A cloud can be private
+              or public.
+              <a href="#" class="btn btn-light">
+                <div class="bi bi-chevron-right">Read More</div>
+              </a>
+            </p>
+          </div>
+
+          <div class="col-md">
+            <img
+              src="./img/cloud computing.jpg"
+              class="img-fluid"
+              alt="devops"
+            />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!--Questions section -->
+    <section id="questions" class="p-5">
+      <div class="container">
+        <h2 class="text-center mb-4">Frequent Ask Questions</h2>
+        <div class="accordion-flush">
+          <div class="accordion accordion-flush" id="questions">
+            <!-- Item 1 -->
+
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="flush-headingTwo">
+                <button
+                  class="accordion-button collapsed"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#flush-collapseTwo"
+                  aria-expanded="false"
+                  aria-controls="flush-collapseTwo"
+                >
+                  What is Cloud Computing?
+                </button>
+              </h2>
+              <div
+                id="flush-collapseTwo"
+                class="accordion-collapse collapse"
+                aria-labelledby="flush-headingTwo"
+                data-bs-parent="#accordionFlushExample"
+              >
+                <div class="accordion-body">
+                  Cloud computing is the delivery of different services through
+                  the Internet. These resources include tools and applications
+                  like data storage, servers, databases, networking, and
+                  software. Rather than keeping files on a proprietary hard
+                  drive or local storage device, cloud-based storage makes it
+                  possible to save them to a remote database. As long as an
+                  electronic device has access to the web, it has access to the
+                  data and the software programs to run it. Cloud computing is a
+                  popular option for people and businesses for a number of
+                  reasons including cost savings, increased productivity, speed
+                  and efficiency, performance, and security.
+                </div>
+              </div>
+            </div>
+
+            <!-- Item 2 -->
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="flush-headingThree">
+                <button
+                  class="accordion-button collapsed"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#flush-collapseThree"
+                  aria-expanded="false"
+                  aria-controls="flush-collapseThree"
+                >
+                  What is Microsoft Azure?
+                </button>
+              </h2>
+              <div
+                id="flush-collapseThree"
+                class="accordion-collapse collapse"
+                aria-labelledby="flush-headingThree"
+                data-bs-parent="#accordionFlushExample"
+              >
+                <div class="accordion-body">
+                  Azure is a cloud computing platform and an online portal that
+                  allows you to access and manage cloud services and resources
+                  provided by Microsoft. These services and resources include
+                  storing your data and transforming it, depending on your
+                  requirements. To get access to these resources and services,
+                  all you need to have is an active internet connection and the
+                  ability to connect to the Azure portal.
+                </div>
+              </div>
+            </div>
+            <!-- Item 3 -->
+            <div class="accordion-item">
+    <h2 class="accordion-header" id="flush-headingOne">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+        Why Is Cloud Computing Important?
+      </button>
+    </h2>
+    <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+      <div class="accordion-body">
+       Let’s assume that you have an idea for a revolutionary application that can provide great user experience and can become highly profitable. For the application to become successful, you will need to release it on the internet for people to find it, use it, and spread the word about its advantages. However, releasing an application on the internet is not as easy as it seems.
+
+To do so, you will need various components, like servers, storage devices, developers, dedicated networks, and application security to ensure that your solution works the way it is intended to. These are a lot of components, which can be problematic. </div>
           </div>
         </div>
       </div>
